[tool.poetry]
name = "southwest-headers"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
undetected-chromedriver = "^3.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
