[tool.poetry]
name = "southwest-headers"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
southwest-headers = 'southwest_headers.main:get_headers'

[tool.poetry.dependencies]
python = "^3.9"
undetected-chromedriver = "^3.5.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 150
